kubernetes/main/apps/observability/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/gateway.networking.k8s.io.httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
